[gd_scene load_steps=25 format=2]

[ext_resource path="res://interface/profile/CharacterSelectClient.gd" type="Script" id=1]
[ext_resource path="res://interface/rooms/Camada 158.png" type="Texture" id=2]
[ext_resource path="res://Prefabs/CancelButton2.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/rooms/Cida_button.png" type="Texture" id=4]
[ext_resource path="res://interface/rooms/Adao_button.png" type="Texture" id=5]
[ext_resource path="res://interface/rooms/Ze_button.png" type="Texture" id=6]
[ext_resource path="res://interface/rooms/Xereta_button.png" type="Texture" id=7]
[ext_resource path="res://interface/rooms/Vital_button.png" type="Texture" id=8]
[ext_resource path="res://interface/rooms/Legis_button.png" type="Texture" id=9]
[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=10]
[ext_resource path="res://interface/rooms/Camada 136 copiar 2.jpg" type="Texture" id=11]
[ext_resource path="res://interface/rooms/Ze_button_selected.png" type="Texture" id=12]
[ext_resource path="res://interface/rooms/Adao_button_selected.png" type="Texture" id=13]
[ext_resource path="res://interface/rooms/Cida_button_selected.png" type="Texture" id=14]
[ext_resource path="res://interface/rooms/Xereta_button_selected.png" type="Texture" id=15]
[ext_resource path="res://interface/rooms/Vital_button_selected.png" type="Texture" id=16]
[ext_resource path="res://interface/rooms/Legis_button_selected.png" type="Texture" id=17]
[ext_resource path="res://interface/login/Jogo_AdivinhaQuemE_box_003.png" type="Texture" id=18]
[ext_resource path="res://Fonts/Boogaloo-Regular.otf" type="DynamicFontData" id=19]
[ext_resource path="res://interface/rooms/Camada 754 copiar 3.png" type="Texture" id=20]
[ext_resource path="res://interface/login/Jogo_AdivinhaQuemE_box_003b.png" type="Texture" id=21]
[ext_resource path="res://interface/mainscreen/Jogo_AdivinhaQuemE_Tela10/X copiar 2b.png" type="Texture" id=22]
[ext_resource path="res://Audio/button.mp3" type="AudioStream" id=23]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 19 )

[node name="CharSeleClient" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_right = 942.0
margin_bottom = 227.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 267.0
margin_top = 59.0
margin_right = -9.0
margin_bottom = -7.0
custom_fonts/font = ExtResource( 10 )
text = "Escolha seu Personagem"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 50.0
margin_top = 375.0
margin_right = 1030.0
margin_bottom = 1738.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LegisBtn" type="TextureButton" parent="GridContainer"]
margin_right = 488.0
margin_bottom = 451.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_focused = ExtResource( 17 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="GridContainer/LegisBtn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -135.5
margin_top = -87.0
margin_right = 135.5
texture = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer/LegisBtn/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Legis"
align = 1
valign = 1

[node name="ZeBtn" type="TextureButton" parent="GridContainer"]
margin_left = 492.0
margin_right = 980.0
margin_bottom = 451.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="GridContainer/ZeBtn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -135.5
margin_top = -87.0
margin_right = 135.5
texture = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer/ZeBtn/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Zé Plenarinho"
align = 1
valign = 1

[node name="VitalBtn" type="TextureButton" parent="GridContainer"]
margin_top = 455.0
margin_right = 488.0
margin_bottom = 906.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_focused = ExtResource( 16 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="GridContainer/VitalBtn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -135.5
margin_top = -87.0
margin_right = 135.5
texture = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer/VitalBtn/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Vital"
align = 1
valign = 1

[node name="XeretaBtn" type="TextureButton" parent="GridContainer"]
margin_left = 492.0
margin_top = 455.0
margin_right = 980.0
margin_bottom = 906.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="GridContainer/XeretaBtn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -135.5
margin_top = -87.0
margin_right = 135.5
texture = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer/XeretaBtn/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Xereta"
align = 1
valign = 1

[node name="CidaBtn" type="TextureButton" parent="GridContainer"]
margin_top = 910.0
margin_right = 488.0
margin_bottom = 1361.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 14 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="GridContainer/CidaBtn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -135.5
margin_top = -87.0
margin_right = 135.5
texture = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer/CidaBtn/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Cida"
align = 1
valign = 1

[node name="AdaoBtn" type="TextureButton" parent="GridContainer"]
margin_left = 492.0
margin_top = 910.0
margin_right = 980.0
margin_bottom = 1361.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="GridContainer/AdaoBtn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -135.5
margin_top = -87.0
margin_right = 135.5
texture = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer/AdaoBtn/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Adão"
align = 1
valign = 1

[node name="CancelButton2" parent="." instance=ExtResource( 3 )]
texture_pressed = ExtResource( 22 )

[node name="ConfirmButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -216.0
margin_top = -199.0
margin_right = 216.0
margin_bottom = 25.0
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 21 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfirmButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -76.0
margin_top = 27.0
margin_right = 64.0
margin_bottom = -37.08
custom_fonts/font = ExtResource( 10 )
text = "Confirmar
"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )

[connection signal="pressed" from="GridContainer/LegisBtn" to="." method="_on_LegisBtn_pressed"]
[connection signal="pressed" from="GridContainer/ZeBtn" to="." method="_on_ZeBtn_pressed"]
[connection signal="pressed" from="GridContainer/VitalBtn" to="." method="_on_VitalBtn_pressed"]
[connection signal="pressed" from="GridContainer/XeretaBtn" to="." method="_on_XeretaBtn_pressed"]
[connection signal="pressed" from="GridContainer/CidaBtn" to="." method="_on_CidaBtn_pressed"]
[connection signal="pressed" from="GridContainer/AdaoBtn" to="." method="_on_AdaoBtn_pressed"]
[connection signal="pressed" from="CancelButton2" to="." method="_on_CancelButton2_pressed"]
[connection signal="pressed" from="ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
